@@ -1,3 +1,8 @@
+2004-05-29  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elfxx-ia64.c (elfNN_ia64_relax_section): Undo the last
+	change.
+
 2004-05-28  DJ Delorie  <dj@redhat.com>
 
 	* elf-m10300.c (mn10300_elf_relax_section): Preserve reloc addend
